maintainer who neither acknowledged nor incorporated the fixes.  Post-2.0
development of indent has not produced a version (through 2.2.7) which I
find useful since most of the differences I see between their respective
outputs are new bugs in the 2.x version.  Perhaps the next maintainer of
indent will know something about regression testing -T.Dickey 2002/4/7

2002-04-07

	+ convert to ANSI C.

	+ change message() output format to make it consistent with other
	  applications such as 'grep', i.e., filename:linenumber:message

2000-01-12

	+ fix a buffer overflow when reading a comment with very long line
	  (e.g., 2k).

1999-06-09

        + suppress a blank line before #endif after a declaration, unless we're
	  putting blanks around preprocessor lines anyway.

	+ update the configure script (I was not able to build the original
	  program on SunOS 4.1.3 because of the memmove reference).

------------------------------------------------------------------------------
1998-12-02    <jla@void.arceneaux.com>

	* indent.c (need_chars): Changed this #define to an inline
	function.  Also, increase size of buffer by at least `needed'.

1998-11-25    <jla@void.arceneaux.com>

	* lexi.c (lexi): New case lable for 'L' in switch (*token) to
	handle wide strings.
	In the if statement for alphanums, fail the test if we are looking
	at L" or L'.
	* regression/TEST: added new test case wide.c to EXAMPLES.

1998-11-24    <jla@void.arceneaux.com>

	* indent.texinfo (Common styles): Corrected description of canned
	styles to correspond with args.c

	* makefile.in (TARFILES): Removed indent.1 from the list.

1998-11-23    <jla@void.arceneaux.com>

	* backup.c (make_backup): Removed #ifdef __MSDOS__, just declare
	size unsigned int in all cases.

1998-11-22    <jla@void.arceneaux.com>

	* All code now passes through gcc -Wall.

	* args.c: Removed unused variable `exp_troff'.

	* comments.c (print_comment): Removed unused label comment_exit.
